# week1

./: CMakeLists.txt  tetris.c  windows_termios.h
task1/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt  main.cpp
task2/include/: ans_handler.hpp  my_math.hpp
task2/src/: ans_handler.cpp  my_math.cpp
